# silentdata-enclave

./: CMakeLists.txt  Dockerfile  README.md  print_mrenclave.py  reproduce_build.sh  start_build.sh.tmp
cmake/: FindSGX.cmake
enclave/: CMakeLists.txt  core_status_codes.h  enclave.config.xml  enclave.cpp  enclave.edl  enclave_debug.config.xml
enclave/client/: CMakeLists.txt  client_opt.h  httpresponseparser.h  https_client.cpp  https_client.hpp  https_response.cpp  https_response.hpp  plaid_certificate.h  response.h
enclave/common/: CMakeLists.txt  date_time.cpp  date_time.hpp  enclave_exception.hpp  enclave_logger.cpp  enclave_logger.hpp  json.hpp  sgx_error_message.cpp  sgx_error_message.hpp  types.hpp
enclave/crypto/: CMakeLists.txt  ecc_key_pair.cpp  ecc_key_pair.hpp  enclave_crypto.cpp  enclave_crypto.hpp  rsa_params.hpp
enclave/json/: CMakeLists.txt  jsmn.cpp  jsmn.h  json.hpp  json_data.cpp  json_data.hpp  json_parser.cpp  json_parser.hpp
enclave/plaid/: CMakeLists.txt  plaid_attestation.cpp  plaid_attestation.hpp  plaid_certificate.h  plaid_client.cpp  plaid_client.hpp  plaid_comparison_functions.cpp  plaid_comparison_functions.hpp  plaid_errors.cpp  plaid_errors.hpp  plaid_requests.cpp  plaid_requests.hpp
enclave/proofs/: CMakeLists.txt  comparison_functions.cpp  comparison_functions.hpp  proof_data.cpp  proof_data.hpp  proof_handlers.cpp  proof_handlers.hpp  request_types.cpp  request_types.hpp  result_types.cpp  result_types.hpp
